# casevo

./: README.md  pyproject.toml
src/casevo/: __init__.py  base_component.py  chain.py  llm_interface.py  memory.py  model_base.py  prompt.py
src/casevo/util/: tot_log_stream.py
